added LLDS